syntax = "proto3";

option go = "gen/interceptor/proto/v1";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string data = 1;
}